# robertuito

./: .gitignore  GCP.md  LICENSE  README.md  TRAINING.md  pyproject.toml  run_all_benchmarks.sh  smoke_test.sh
config/: 4k-v3-test.json  deepspeed_config.json  example_error.json  finetune-cased-10000-v2.json  finetune-cased-20000-v2.json  finetune-cased-2500-v2.json  finetune-cased-5000-v2.json  finetune-uncased-10000-v2.json  finetune-uncased-20000-v2.json  finetune-uncased-2500-v2.json  finetune-uncased-5000-v2.json  scratch-cased.json  scratch-deacc.json  scratch-uncased-colab.json  scratch-uncased-v2.json  scratch-uncased.json
docs/: GCP.md  PERFORMANCE.md  RESULTS.md  ROBERTA.md  RUN_BENCHMARKS.md
finetune_vs_scratch/: context_hate.py  dataset.py  emotion.py  experiments.py  hate.py  irony.py  model.py  preprocessing.py  sentiment.py  tokenizer.py
notebooks/: Results.ipynb  RoBERTuito results.ipynb  Tokenizer.ipynb  Tweets Exploratory.ipynb  Vocabulary Comparison.ipynb  datasets.ipynb  deacc-vs-uncased.ipynb  improve_tokenization.ipynb  iterators.ipynb  test.ipynb
output/: bertin.json  beto-cased-10000.json  beto-cased-15000.json  beto-cased-20000.json  beto-cased-2500.json  beto-cased-5000.json  beto-cased.json  beto-ft-1000.json  beto-ft-2000.json  beto-uncased-1000.json  beto-uncased-10000.json  beto-uncased-15000.json  beto-uncased-2000.json  beto-uncased-20000.json  beto-uncased-2500.json  beto-uncased-4000-tpu.json  beto-uncased-5000-tpu.json  beto-uncased-5000.json  beto-uncased.json  beto.json  checkpoint-100k.json  checkpoint-124k.json  checkpoint-46k.json  checkpoint-62k.json  checkpoint-87k.json  roberta-bne.json  robertuito-cased-574k.json  robertuito-cased.json  robertuito-deacc-288k.json  robertuito-deacc-344k.json  robertuito-deacc-400k.json  robertuito-deacc-440k.json  robertuito-deacc-490k.json  robertuito-deacc.json  (+8 more)
(+335 files in other folders)
