[tool.poetry]
name = "finetune_vs_scratch"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.8.2"
datasets = "^1.9.0"
tokenizers = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
