[tool.poetry]
name = "finetune_vs_scratch"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.8.2"
datasets = "^1.9.0"
tokenizers = "^0.10.3"
fire = "^0.4.0"
pysentimiento = {git = "https://github.com/pysentimiento/pysentimiento"}
jupyterlab = "^3.0.16"
setuptools = "^57.1.0"
pandarallel = "^1.5.2"
ipywidgets = "^7.6.3"
matplotlib = "^3.4.2"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
